--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 "versao":"2.0",
 
-"toast":"Galera Entrem no grupo do telegram para receber as atualizações por lá!\nGrupo: https://t.me/jatodoshackersgrupo <--\n\nQuer pegar top global sem tomar banimento ou blacklist? Compre a versão vip em nosso site:\nhttps://jatodosmods.com\nUse o cupom: jato35\nE ganhe 35% de desconto!\nAlém de pegar global, você pode recuperar sua conta banida a muito tempo em questão de segundos!",
+"toast":"Galera Entrem no grupo do telegram para receber as atualizações por lá!\nGrupo: https://t.me/jatodoshackersgrupo <--",
 
 "cor":"#FF0000",
 
@@ -118,7 +118,7 @@
 
 "linkmtmanager":"https://cdn.discordapp.com/attachments/1058123268483186788/1062889836656197732/MT_Manager_Pro.apk",
 
-"botaodimas":"online",
+"botaodimas":"onlinee",
 
 "visibletextvip":"on",
 
